Add user authentication, registration, and JWT-based security
- Implemented user registration and login functionality with validation.
- Added JWT-based authentication and role-based authorization.
- Set up database with MariaDB (production) and H2 (test environment).
- Integrated OpenAPI documentation and Swagger UI.
- Configured CI workflow.
- Created unit tests for user service functionality.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=OptiFi
+spring.config.import=optional:classpath:application-default.properties,optional:classpath:application-secrets.properties
+
+# --- DataSource ---
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# --- Hibernate ---
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+
+server.error.include-stacktrace=never
+server.error.include-message=always
+server.error.include-exception=true
+server.error.include-binding-errors=always
+
+# --- springdoc ---
+springdoc.swagger-ui.url=/swagger-resources/openapi.yml
