--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.config.import=optional:classpath:application-default.properties,optional:
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 
 server.error.include-stacktrace=never
