--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     testImplementation "com.h2database:h2"
+    testImplementation "com.tngtech.archunit:archunit-junit5:1.4.1"
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
