feat(transaction): add create, update, and delete endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,15 @@ spring.config.import=optional:classpath:application-default.properties,optional:
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
+spring.sql.init.mode=always
 
 server.error.include-stacktrace=never
 server.error.include-message=always
 server.error.include-exception=true
 server.error.include-binding-errors=always
+
 
 # --- springdoc ---
 springdoc.swagger-ui.url=/swagger-resources/openapi.yml
