--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,6 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.sql.init.mode=never
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 
