--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ java {
     }
 }
 
+tasks.named("bootJar") {
+    archiveFileName = "optifi.jar"
+}
+
 repositories {
     mavenCentral()
     maven { url = 'https://repo.spring.io/snapshot' }
@@ -29,6 +33,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
