--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,32 @@
+# Port
+server.port=${PORT:8080}
+server.forward-headers-strategy=framework
+
 spring.application.name=OptiFi
-spring.config.import=optional:classpath:application-default.properties,optional:classpath:application-secrets.properties
+spring.config.import=optional:classpath:application-secrets.properties
 
 # --- DataSource ---
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=${DB_DRIVER:org.mariadb.jdbc.Driver}
+spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/optifi}
+spring.datasource.username=${DB_USER:root}
+spring.datasource.password=${DB_PASS:}
 
 # --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO:validate}
+spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.MariaDBDialect}
+spring.sql.init.mode=${SQL_INIT_MODE:never}
+
+# --- JWT ---
+jwt.secret=${JWT_SECRET:dev-secret-change-me}
+jwt.expiration=${JWT_EXP_MS:86400000}
+
+# --- CORS ---
+app.cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 
 server.error.include-stacktrace=never
 server.error.include-message=always
 server.error.include-exception=true
 server.error.include-binding-errors=always
-
 
 # --- springdoc ---
 springdoc.swagger-ui.url=/swagger-resources/openapi.yml
