--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+    runtimeOnly "org.postgresql:postgresql"
 
     compileOnly 'org.projectlombok:lombok'
 
