--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,15 @@
 spring.sql.init.mode=never
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
+
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
