--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,19 @@ server.forward-headers-strategy=framework
 spring.application.name=OptiFi
 
 # --- DataSource ---
-spring.datasource.driver-class-name=${DB_DRIVER:org.mariadb.jdbc.Driver}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/optifi}
 spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:}
+spring.datasource.password=${DB_PASS:root}
+
 
 # --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO:validate}
-spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.MariaDBDialect}
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.sql.init.mode=${SQL_INIT_MODE:never}
 
 # --- JWT ---
-jwt.secret=${JWT_SECRET:dev-secret-change-me}
+jwt.secret=${JWT_SECRET:a9f3c6d1e8b7f2a4c5e9d6b8f1a7c2e4d9b5f8a1c6e7d2b3a4f9c8e5d6}
 jwt.expiration=${JWT_EXP_MS:86400000}
 
 # --- CORS ---
