--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,8 +8,8 @@ server.forward-headers-strategy=framework
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
