feat(config): update prod property file to fix endless redirect with own domain

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,15 +1,19 @@
-spring.sql.init.mode=never
-
-spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
+spring.profiles.active=prod
 
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
+
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
 
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD:}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
