--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,19 +1,18 @@
-spring.profiles.active=prod
+spring.sql.init.mode=never
+
+spring.jpa.hibernate.ddl-auto=${DDL_AUTO}
 
 server.port=${PORT:8080}
 server.forward-headers-strategy=framework
 
-server.tomcat.remoteip.protocol-header=x-forwarded-proto
-server.tomcat.remoteip.remote-ip-header=x-forwarded-for
-
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 
+server.tomcat.remoteip.protocol-header=x-forwarded-proto
+server.tomcat.remoteip.remote-ip-header=x-forwarded-for
+
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.password=${POSTGRES_PASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
