feat(frontend, backend): enable registration toggle and handle feature flag API integration

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -8,6 +8,7 @@ server.forward-headers-strategy=native
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 
+optifi.features.registration-enabled=${OPTIFI_FEATURES_REGISTRATION_ENABLED:false}
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
