--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -30,3 +30,6 @@ server.error.include-binding-errors=always
 
 # --- springdoc ---
 springdoc.swagger-ui.url=/swagger-resources/openapi.yml
+
+# --- custom flags ---
+optifi.features.registration-enabled=true
