--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,15 +6,16 @@ spring.application.name=OptiFi
 
 # --- DataSource ---
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/optifi}
+spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/optifi?createDatabaseIfNotExist=true}
 spring.datasource.username=${DB_USER:root}
 spring.datasource.password=${DB_PASS:root}
 
 
 # --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.sql.init.mode=${SQL_INIT_MODE:never}
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 # --- JWT ---
 jwt.secret=${JWT_SECRET:a9f3c6d1e8b7f2a4c5e9d6b8f1a7c2e4d9b5f8a1c6e7d2b3a4f9c8e5d6}
