feat(categories): add user categories feature flag and update category visuals

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -9,6 +9,7 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.probes.enabled=true
 
 optifi.features.registration-enabled=${OPTIFI_FEATURES_REGISTRATION_ENABLED:false}
+optifi.features.allow-user-categories=${OPTIFI_FEATURES_ALLOW_USER_CATEGORIES:false}
 
 spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${POSTGRES_USER}
