--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,3 +34,4 @@ springdoc.swagger-ui.url=/swagger-resources/openapi.yml
 
 # --- custom flags ---
 optifi.features.registration-enabled=true
+optifi.features.allow-user-categories=${OPTIFI_FEATURES_ALLOW_USER_CATEGORIES:true}
