feat(backend, frontend): add Google Login integration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.sql.init.mode=always
 # --- JWT ---
 jwt.secret=${JWT_SECRET:a9f3c6d1e8b7f2a4c5e9d6b8f1a7c2e4d9b5f8a1c6e7d2b3a4f9c8e5d6}
 jwt.expiration=${JWT_EXP_MS:86400000}
+security.google.client-id=${GOOGLE_CLIENT_ID:}
 
 # --- CORS ---
 app.cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
