feat(database, user-preferences): migrate schema to PostgreSQL, add budgets, add user preferences defaults

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,17 +5,9 @@ server.forward-headers-strategy=framework
 spring.application.name=OptiFi
 
 # --- DataSource ---
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=${DB_URL:jdbc:mariadb://localhost:3306/optifi?createDatabaseIfNotExist=true}
-spring.datasource.username=${DB_USER:root}
-spring.datasource.password=${DB_PASS:root}
-
-
-# --- Hibernate ---
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
+spring.datasource.url=${DB_URL:}
+spring.datasource.username=${DB_USER:}
+spring.datasource.password=${DB_PASS:}
 
 # --- JWT ---
 jwt.secret=${JWT_SECRET:a9f3c6d1e8b7f2a4c5e9d6b8f1a7c2e4d9b5f8a1c6e7d2b3a4f9c8e5d6}
@@ -32,7 +24,13 @@ server.error.include-binding-errors=always
 
 # --- springdoc ---
 springdoc.swagger-ui.url=/swagger-resources/openapi.yml
+springdoc.swagger-ui.path=/docs
 
 # --- custom flags ---
 optifi.features.registration-enabled=true
-optifi.features.allow-user-categories=${OPTIFI_FEATURES_ALLOW_USER_CATEGORIES:true}
+optifi.features.allow-user-categories=true
+
+# --- defaults ---
+optifi.defaults.user-currency=EUR
+optifi.defaults.user-locale=bg-BG
+optifi.defaults.user-timezone=Europe/Sofia
