--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@react-oauth/google": "^0.13.4",
-    "@tanstack/react-query": "^5.90.18",
-    "axios": "^1.13.2",
+    "@tanstack/react-query": "^5.90.20",
+    "axios": "^1.13.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -33,6 +33,7 @@
     "globals": "^16.5.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vite-tsconfig-paths": "^6.1.0"
   }
 }
