docs(backend): enhance OpenAPI documentation across all REST controllers

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,8 +23,17 @@ server.error.include-exception=true
 server.error.include-binding-errors=always
 
 # --- springdoc ---
-springdoc.swagger-ui.url=/swagger-resources/openapi.yml
 springdoc.swagger-ui.path=/docs
+# UI behavior
+springdoc.swagger-ui.doc-expansion=none
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.display-request-duration=true
+
+# Cleaner default
+springdoc.swagger-ui.defaultModelsExpandDepth=1
+springdoc.swagger-ui.defaultModelExpandDepth=1
+
 
 # --- custom flags ---
 optifi.features.registration-enabled=true
